src/test/deca/syntax/valid/synt/float_with_positive_exp_notation.deca
/*
    Description : Nombre flottant avec une notation exponentielle positive

    Résultat : OK
*/
{
    float x = 0.5E+5;
}
